fix some aligns

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root {
   /* Neutrals */
   --white: hsl(0, 0%, 100%);
+  --stone-50: #FFF8FC;
   --stone-100: hsl(30, 54%, 90%);
   --stone-150: hsl(30, 18%, 87%);
   --stone-600: hsl(30, 10%, 34%);
@@ -55,7 +56,7 @@ li {
   padding: 1.75rem;
 }
 .recipe .content .intro header {
-  margin-bottom: 3rem;
+  margin-bottom: 2.5rem;
 }
 .recipe .content .intro header .title {
   font-size: 2.5rem;
@@ -69,9 +70,9 @@ li {
   font-weight: 500;
 }
 .recipe .content .intro .preparation-time {
-  background-color: var(--stone-100);
-  padding: 1.25rem;
-  border-radius: 1.25rem;
+  background-color: var(--stone-50);
+  padding: 1.5rem;
+  border-radius: 1.1rem;
 }
 .recipe .content .intro .preparation-time .title {
   color: var(--rose-800);
@@ -125,11 +126,11 @@ li {
   }
   .recipe {
     border-radius: 1rem;
-    padding: 1.75rem;
+    padding: 2.25rem;
   }
   .recipe figure {
     margin-bottom: 1.25rem;
-    border-radius: 0.5em;
+    border-radius: 0.75em;
     overflow: hidden;
   }
   .recipe .content {
